# expenser_project

./: README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  constants.js  index.js
frontend/src/api/: axios.js  getTransactions.js
frontend/src/components/: Copyright.js  ErrorPage.js  RequireAuth.js  SignIn.js  SignUp.js  UnauthedOnly.js
frontend/src/components/dashboard/: AuthedLayout.js  Chart.js  Dashboard.js  Deposits.js  Highlights.js  Orders.js  Recent.js  listItems.js
frontend/src/components/dashboard/Reports/: Reports.js  TansactionsTable.js
frontend/src/components/dashboard/formGenerator/: FormGenerator.js  GenerateLink.js
frontend/src/components/form/: AddExpenseForm.js
frontend/src/context/: AuthProvider.js
frontend/src/data/: categories.js  currencyList.js
frontend/src/hooks/: axios.js  useAxiosPrivate.js
server/: .gitignore  CMakeLists.txt  README.md  dbc.sql
server/config/: CMakeLists.txt  Sensitive.h
server/libs/: CMakeLists.txt
server/libs/cryptopp-cmake/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp  modeles.h
server/src/middlewares/: AuthedUser.h
server/src/modeles/: Expenser.h  User.h
server/src/routes/: CMakeLists.txt  routes.h
server/src/routes/auth/: CMakeLists.txt  auth.cpp  auth.h
server/src/routes/auth/login/: login.cpp  login.h
server/src/routes/form/: CMakeLists.txt  Form.cpp  Form.h
server/src/routes/transactions/: CMakeLists.txt  TransactionRoutes.cpp  TransactionRoutes.h
server/src/utilities/: Base64EncDec.cpp  Base64EncDec.h  CMakeLists.txt  formUrlGenerator.cpp  formUrlGenerator.h  hash.cpp  hash.h  token.cpp  token.h
